--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,12 @@ html
     link(href='style.css', rel='stylesheet')
   body
     header
-      h1 My Website!
+      h1
+        a(href="./") name of website
+      ul(id="menu")
+        for item in config.menu
+          li
+            a(href=item[1]) #{item[0]}
               
     div(id='content')
       block content
