--- a/public/style.css
+++ b/public/style.css
@@ -5,14 +5,14 @@ body
     font-family: 'Lato', serif;
 }
 
-#menu {
+#nav {
     list-style-type: none;
     overflow: hidden;
     margin: 0;
     padding: 0;
 }
 
-#menu li {
+#nav li {
     float: left;
     background: #b1e514;
     padding: 8px;
