uploaded icon and updated config.json to become quotes instead of menu

--- a/public/style.css
+++ b/public/style.css
@@ -5,11 +5,15 @@ body
     font-family: 'Lato', serif;
 }
 
+header {
+    margin: auto;
+    text-align: center;
+}
+
 #nav {
     list-style-type: none;
     overflow: hidden;
-    margin: 0;
-    padding: 0;
+    margin: auto;
 }
 
 #nav li {
