--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Artifika|Lato');
 
+@keyframes comeIn {
+    0% {
+        top: -20px;
+        opacity: 0;
+    }
+    100% {
+        top: 0px;
+        opacity: 1;
+    }
+}
+
 body
 {
     font-family: 'Lato', serif;
@@ -8,18 +19,32 @@ body
 header {
     margin: auto;
     text-align: center;
+    width: 100%;
 }
 
-#nav {
+nav {
+    width: 100%;
+    margin: auto;
+    background-color: #b1e514;
+}
+
+nav > ul {
     list-style-type: none;
     overflow: hidden;
     margin: auto;
 }
 
-#nav li {
+nav > ul > li {
     float: left;
     background: #b1e514;
     padding: 8px;
+}
+
+#quote {
+    position: relative;
+    font-family: cursive;
+    animation: comeIn 1.8s;
+    text-align: center;
 }
 
 a {
