--- a/views/directions.pug
+++ b/views/directions.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
     p directions
-    img(src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13 & size = 600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318&markers=color:red%7Clabel:C%7C40.718217,-73.998284&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY")
+    script(src="http://maps.google.com/maps?file=api&v=2&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY" type="text/javascript")
+    script(src="http://alderaan.arc.nasa.gov/maps/nasamaps.js" type="text/javascript")
+    // img(src="https://maps.googleapis.com/maps/api/staticmap?center=Brooklyn+Bridge,New+York,NY&zoom=13 & size = 600x300&maptype=roadmap&markers=color:blue%7Clabel:S%7C40.702147,-74.015794&markers=color:green%7Clabel:G%7C40.711614,-74.012318&markers=color:red%7Clabel:C%7C40.718217,-73.998284&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY")
