--- a/public/style.css
+++ b/public/style.css
@@ -17,6 +17,10 @@ body
     margin: 0;
 }
 
+#website-name {
+    font-size: 2em;
+}
+
 header {
     margin: auto;
     text-align: center;
@@ -68,6 +72,8 @@ nav#header-nav ul a:hover {
 
 #body {
     margin: 20px;
+    min-height: 100%;
+    height: 100%;
 }
 
 #quote {
@@ -108,6 +114,8 @@ a:hover {
 }
 
 footer {
+    position: absolute;
+    bottom: 0;
     padding: 20pt;
     margin: auto;
     width: 100%;
@@ -134,8 +142,14 @@ footer #footer-right {
 
 footer a {
     color: #626262;
+    border-bottom: 1px solid #8f8f8f;
 }
 
 footer a:visited {
     color: #626262;
+    border-bottom: 1px solid #8f8f8f;
+}
+
+footer a:hover {
+    border-bottom: 2px solid #8f8f8f;
 }
