--- a/public/style.css
+++ b/public/style.css
@@ -11,10 +11,23 @@
     }
 }
 
+html {
+    height: 100%;
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body
 {
-    font-family: 'Lato', serif;
+    position: relative;
     margin: 0;
+    height: 100%;
+    min-height: 100%;
+    font-family: 'Lato', serif;
+
 }
 
 #website-name {
@@ -88,8 +101,7 @@ nav#header-nav ul a:hover {
 
 #body {
     margin: 20px;
-    min-height: 100%;
-    height: 100%;
+    padding-bottom: 50%;
 }
 
 #quote {
@@ -134,7 +146,8 @@ a:hover {
 }
 
 footer {
-    bottom: 0;
+    /*position: absolute;*/
+    /*bottom: 0;*/
     padding: 20pt;
     margin: auto;
     width: 100%;
