--- a/views/dinner.pug
+++ b/views/dinner.pug
@@ -1,11 +1,12 @@
 extends layout
 
 block content
-  h2=title
-  p ONE THIRD OF THE MENU ITEMS
-  ul(class='menu')
-    for item in config.menu.Dinner
-      a(href=item[1])
-        li
-          span(class='menu-item') #{item[0]}
-          span(class='menu-desc') #{item[2]}
+    h2=title
+    p ONE THIRD OF THE MENU ITEMS
+    ul(class='menu')
+        for item in config.menu.Dinner
+            a(class=-'menu-option' href='#')
+                li
+                    span(class='menu-item') #{item[0]}
+                    img(src=item[2] class='menu-img')
+                    span(class='menu-desc') #{item[1]}
