css done cards work now map is fancy

--- a/views/dinner.pug
+++ b/views/dinner.pug
@@ -3,10 +3,9 @@ extends layout
 block content
     h2=title
     p ONE THIRD OF THE MENU ITEMS
-    ul(class='menu')
-        for item in config.menu.Dinner
-            a(class=-'menu-option' href='#')
-                li
-                    span(class='menu-item') #{item[0]}
-                    img(src=item[2] class='menu-img')
-                    span(class='menu-desc') #{item[1]}
+    for item in config.menu.Dinner
+        div(class='menu-card')
+            img(src=item[3] class='menu-card-img')
+            div(class='menu-card-item') #{item[0]}
+            div(class ='menu-card-desc') #{item[1]}
+            div(class='menu-card-price') #{item[2]}
