--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
   body
     header
       span(id="website-name")
-        a(href="./") ^3
+        a(href="./") A fancy website name ^3
       nav(id="header-nav")
         div(class="nav-container")
           ul
