--- a/public/style.css
+++ b/public/style.css
@@ -41,7 +41,7 @@ body
 }
 
 #website-name a:visited {
-    color: #bf7200;
+    color: #6a4100;
     border: none;
 }
 
@@ -74,27 +74,36 @@ nav#header-nav .nav-container {
 nav#header-nav ul {
     list-style-type: none;
     width: 100%;
-    padding: 12px;
-    /*display: inline;*/
-    /*overflow: hidden;*/
-    /*margin: auto;*/
-    /*text-align: center;*/
+    padding: 18px;
+
 }
 
 nav#header-nav ul li {
     display: inline;
     background: #b1e514;
-    padding: 12px;
+    transition: background 0.4s;
+    padding: 18px;
     font-size: 15pt;
 }
 
 nav#header-nav ul li:hover {
     background: #bbed17;
+    transition: background 0.2s;
 }
 
 nav#header-nav ul a li {
     border-bottom: none;
 }
+
+nav#header-nav ul a {
+    font-weight: 600;
+    color: #8f7832;
+}
+
+nav#header-nav ul a:visited {
+    font-weight: 600;
+}
+
 
 nav#header-nav ul a:hover {
     border-bottom: none;
@@ -116,52 +125,80 @@ nav#header-nav ul a:hover {
     user-select: none;
 }
 
-.menu {
-    list-style-type: none;
+h2 {
+    margin: 10px 20px 20px 10px;
+}
+p {
+    margin: 10px;
 }
 
-.menu a {
-    margin: auto;
-
-}
-
-.menu li {
-    padding: 20px;
-    min-width: 100px;
-    background-color: #f6f6f6;
-    border: 2px solid #c8c8c8;
-    border-radius: 3px;
-    margin: 5px;
+.menu-card {
+    background-color: #fafafa;
+    transition: box-shadow 0.8s;
+    box-shadow: 0 4px 8px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 2px;
+    min-width: 250px;
+    max-width: 300px;
+    display: inline-block;
+    margin: 10px;
     text-align: center;
-    transition: background-color 0.5s;
+    padding: 5px;
+    cursor: default;
 }
 
-.menu li:hover {
-    background-color: #d3d3d3;
-    transition: background-color 0.7s;
+.menu-card:hover {
+    transition: box-shadow 0.4s;
+    box-shadow: 0 6px 12px 6px rgba(0, 0, 0, 0.4);
 }
 
-.menu-item {
-    padding: 10px;
-    text-align: center;
-    display: block;
+.menu-card-item {
     font-size: 1.6em;
     font-weight: 700;
-    color: #5e5e5e;
-    width: 100%;
-}
-
-.menu-img {
-    width: 100pt;
-    height: 100pt;
-    display: block;
-    margin: 0 auto;
-}
-
-.menu-desc {
     text-align: center;
-    font-size: 1.4em;
-    color: #808080;
+    height: 5%;
+    margin: 20px;
+}
+
+.menu-card-img {
+    width: 100%;
+    margin: auto;
+}
+
+.menu-card-desc {
+    background-color: #dbdbdb;
+    min-height: 10%;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    font-size: 1.2em;
+    padding: 10px;
+}
+
+.menu-card-price {
+    background-color: #e2e2e2;
+    padding: 5px;
+    font-size: 1.1em;
+    font-weight: 600;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+
+.map-directions {
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+}
+
+.map-directions img {
+    background: #e9e9e9;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    transition: box-shadow 0.8s;
+    border-radius: 30px;
+}
+
+.map-directions img:hover {
+    box-shadow: 0 12px 24px rgba(0,0,0,0.6);
+    transition: box-shadow 0.4s;
 }
 
 a {
