--- a/views/directions.pug
+++ b/views/directions.pug
@@ -4,4 +4,5 @@ block content
     p directions
     //script(src="http://maps.google.com/maps?file=api&v=2&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY" type="text/javascript")
     //script(src="http://alderaan.arc.nasa.gov/maps/nasamaps.js" type="text/javascript")
-    img(src="https://maps.googleapis.com/maps/api/staticmap?center=Mariana_Trench&zoom=13&size=600x300&maptype=roadmap&markers=color:red%7Clabel:A%7C17.750000,142.500000&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY")
+    div(class="map-directions")
+        img(src="https://maps.googleapis.com/maps/api/staticmap?center=Mariana_Trench&zoom=13&size=600x300&maptype=roadmap&markers=color:red%7Clabel:A%7C17.750000,142.500000&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY")
