Update title to be more human-readable

--- a/views/about-us.pug
+++ b/views/about-us.pug
@@ -2,4 +2,4 @@ extends layout
 
 block content
   h2=title
-  p ONE THIRD OF THE "MENU" ITEMS
+  p We're a fictitious burger restaurant for an assignment.
