--- a/views/directions.pug
+++ b/views/directions.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block content
+    h2=title
     p directions
     div(class="map-directions")
         img(src="https://maps.googleapis.com/maps/api/staticmap?center=Neumont&zoom=13&size=600x300&maptype=roadmap&markers=color:red%7Clabel:A%7C40.766116,-111.890657&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY")
