Add humor to about-us

--- a/views/about-us.pug
+++ b/views/about-us.pug
@@ -3,3 +3,11 @@ extends layout
 block content
   h2=title
   p We're a fictitious burger restaurant for an assignment.
+  p We're dedicated to making the worst puns imaginable. 
+  p We hope you enjoy them.
+  p We do not actually sell food or food substitutes.
+  p By using our website you waive all rights, including those rights not given to you. You may keep your lefts. There is no need to wave them.
+  p You agree to not hold us responsible for any damage that may have occurred to you or others, directly or indirectly, through, during or because of any 'sighs', 'facepalms', 'guffaws', 'bellows' or other pun-side-effects.
+  p Yes, we are out of the fries. 
+  p No non-developers were harmed during the making of this website. 
+  p Because the name of the assignment was 'express burgers', we will be requiring that you purchase 15 burgers or less to use this website. If you need to purchase more than 15 burgers, you're going to have to go to another checkout lane.
