Minor updates to home page, now it is no longer blank

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,12 @@ extends layout
 
 block content
   h2=title
-  p Our home page. Welcome home! Feels like 127.0.0.1!
+  p Our home page. 
+  p Welcome home! 
+  p Feels like 127.0.0.1!
+  p Welcome to the Express Burgers Assignment Website Thingy!
+  p Here you can purchase up to 15 burgers without having to wait in line as long as with the other burger checkout lanes where you could be stuck behind someone who needs three carts.
+  p Feel free to have a look around. Some of our food is edible, and we have things to serve for three different meals! 
+  p(class="tab") I'm done sleeping, time to eat. (Known by some as Breakfast)
+  p(class="tab")  Its been a few hours, I should eat. (Occasionally referred to as Lunch)
+  p(class="tab") Finally home from work/school/other! Time to eat! (Known by a few as dinner)
