--- a/public/style.css
+++ b/public/style.css
@@ -275,7 +275,9 @@ footer a:visited {
 }
 
 footer a:hover {
-    border-bottom: 2px solid #8f8f8f;
+    border-bottom: 3px solid #474747;
+    color: #474747;
+    font-weight: 900;
 }
 
 .tab{
