Added more burgers

--- a/views/directions.pug
+++ b/views/directions.pug
@@ -5,3 +5,4 @@ block content
     p directions
     div(class="map-directions")
         img(src="https://maps.googleapis.com/maps/api/staticmap?center=Neumont&zoom=13&size=600x300&maptype=roadmap&markers=color:red%7Clabel:A%7C40.766116,-111.890657&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY")
+        h2 143 Main St, Salt Lake City, UT 84111 
