css - quote background - center text - flex align attempts

--- a/views/breakfast.pug
+++ b/views/breakfast.pug
@@ -8,5 +8,6 @@ block content
       div(class='menu-card')
         img(src=item[3] class='menu-card-img')
         div(class='menu-card-item') #{item[0]}
-        div(class ='menu-card-desc') #{item[1]}
+        div(class ='menu-card-desc')
+          div(class='menu-card-desc-text') #{item[1]}
         div(class='menu-card-price') #{item[2]}
