--- a/public/style.css
+++ b/public/style.css
@@ -169,10 +169,11 @@ p {
 }
 
 .menu-card-item {
-    align-self: center;
+    /*align-self: center;*/
     font-size: 1.6em;
     font-weight: 700;
     text-align: center;
+    max-height: 20px;
     margin: 20px;
 }
 
@@ -190,13 +191,19 @@ p {
     font-size: 1.2em;
     margin: 5px 5px 0px 5px;
     padding: 10px;
+    height: 150px;
+    vertical-align: center;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .menu-card-desc-text {
     max-width: 300px;
+    vertical-align: center;
+    align-self: center;
     margin: auto;
-
 }
 
 .menu-card-price {
