Upgrade breakfast/lunch/dinner text

--- a/views/breakfast.pug
+++ b/views/breakfast.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h2=title
-  p ONE THIRD OF THE MENU ITEMS
+  p Here you will find our dishes best suited to early morning or with coffee.
   div(class='menu-container')
     for item in config.menu.Breakfast
       div(class='menu-card')
