--- a/views/dinner.pug
+++ b/views/dinner.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h2=title
-    p ONE THIRD OF THE MENU ITEMS
+    p These items go well as an end-of-day meal
     div(class='menu-container')
         for item in config.menu.Dinner
             div(class='menu-card')
