--- a/views/lunch.pug
+++ b/views/lunch.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h2=title
-    p ONE THIRD OF THE MENU ITEMS
+    p On this page you will find the items that we recommend you eat around mid-day.
     div(class='menu-container')
         for item in config.menu.Lunch
             div(class='menu-card')
