--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,7 @@ extends layout
 
 block content
   h2=title
-  p Our home page. 
-  p Welcome home! 
+  p Welcome to Puns 'n Burgers! This is our home page!
   p Feels like 127.0.0.1!
   p Welcome to the Express Burgers Assignment Website Thingy!
   p Here you can purchase up to 15 burgers without having to wait in line as long as with the other burger checkout lanes where you could be stuck behind someone who needs three carts.
