--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,8 +21,8 @@ html
         block content
     footer
       div(id="footer-left")
-        h4 localhost:3000 is a restaurant dedicated to serving the best.
-        span localhost:3000 ©2017 Us
+        h4 Puns 'n Burgers is a restaurant dedicated to serving the best.
+        span Puns 'n Burgers ©2017 Us
       div(id="footer-right")
 
         nav(id="footer-nav")
