--- a/views/directions.pug
+++ b/views/directions.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h2=title
-    p directions
+    p Here you can see us on the map
     div(class="map-directions")
         img(src="https://maps.googleapis.com/maps/api/staticmap?center=Neumont&zoom=13&size=800x400&maptype=roadmap&markers=color:red%7Clabel:A%7C40.766116,-111.890657&key=AIzaSyBXHpe54IEkOULNb3YnjFblAYmEny-vKoY")
         h3 143 Main St, Salt Lake City, UT 84111 
