--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@
 html {
     height: 100%;
     box-sizing: border-box;
+    /*min-width: 700px;*/
 }
 
 *, *:before, *:after {
@@ -73,13 +74,16 @@ nav#header-nav .nav-container {
 
 nav#header-nav ul {
     list-style-type: none;
+    display: flex;
     width: 100%;
-    padding: 18px;
-
+    /*padding: 18px;*/
+    flex-flow: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 nav#header-nav ul li {
-    display: inline;
+
     background: #b1e514;
     transition: background 0.4s;
     padding: 18px;
@@ -98,22 +102,24 @@ nav#header-nav ul a li {
 nav#header-nav ul a {
     font-weight: 600;
     color: #8f7832;
+    border: none;
 }
 
 nav#header-nav ul a:visited {
     font-weight: 600;
+    color: #8f7832;
+    border: none;
 }
 
 
 nav#header-nav ul a:hover {
-    border-bottom: none;
+    border: none;
 }
 
 #body {
-    margin: 20px;
+    margin: 20px auto;
     padding-bottom: 50%;
-    text-align: center;
-
+    max-width: 50%;
 }
 
 #quote-div {
@@ -134,17 +140,20 @@ nav#header-nav ul a:hover {
     user-select: none;
 }
 
-#content {
+#content h2 {
+    text-align: center;
 }
 
 p {
     margin: 10px;
+    text-align: justify;
 }
 
 .menu-container {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
 }
 
 .menu-card {
@@ -153,8 +162,8 @@ p {
     transition: box-shadow 0.8s;
     box-shadow: 0 4px 8px 4px rgba(0, 0, 0, 0.2);
     border-radius: 2px;
-    min-width: 250px;
-    /*max-width: 300px;*/
+    min-width: 300px;
+    max-width: 350px;
     margin: 10px;
     padding: 20px;
     cursor: default;
@@ -305,6 +314,6 @@ footer a:hover {
     font-weight: 900;
 }
 
-.tab{
-    text-indent: 50px;
-}
+/*.tab{*/
+    /*text-indent: 50px;*/
+/*}*/
